fix css text-truncate-line-clamp-2

--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -2,16 +2,26 @@ header a {
     margin-right: 10px;
 }
 
-a.active {
+header a.active {
     background-color: yellow !important;
     color: red !important;
 }
 
-.btn-edit, .btn-delete, .btn-copy {
-   font-size: 11px;
-   font-weight: bold;
+.btn-edit,
+.btn-delete,
+.btn-copy {
+    font-size: 11px;
+    font-weight: bold;
 }
 
 .fa-bookmark {
     cursor: pointer;
+}
+
+.text-truncate-line-clamp-2 {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    height: 50px;
 }
